Fixed resizing when a text is overflown

--- a/src/widgets/WYSWYG/ui/classes.module.css
+++ b/src/widgets/WYSWYG/ui/classes.module.css
@@ -1,3 +1,7 @@
+.editor {
+  @apply !h-max;
+}
+
 .editor p {
   @apply !m-0 !p-0;
 }
